Fix #2921